apps/base/redirector/resources/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ip-allowlist
  namespace: redirector
spec:
  ipAllowList:
    sourceRange:
      - 192.168.1.2/31
      - 192.168.1.4/30
      - 192.168.1.8/29
      - 192.168.1.16/28
      - 192.168.1.32/27
      - 192.168.1.64/26
      - 192.168.1.128/25
      - 192.168.4.0/24
      - 2a0b:9401:8b:1::/64
      - 2a0b:9401:8b:4::/64
