apps/base/redirector/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirector
  namespace: redirector
spec:
  hostnames:
    - www.ft.com
    - www.google.com
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: redirector
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: instagram
  namespace: redirector
spec:
  hostnames:
    - instagram.com
    - www.instagram.com
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: redirector
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mandrillapp
  namespace: redirector
spec:
  hostnames:
    - mandrillapp.com
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: redirector
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: medium
  namespace: redirector
spec:
  hostnames:
    - medium.com
    - "*.medium.com"
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: redirector
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reddit
  namespace: redirector
spec:
  hostnames:
    - out.reddit.com
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: redirector
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: skimresources
  namespace: redirector
spec:
  hostnames:
    - go.skimresources.com
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: redirector
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: theguardian
  namespace: redirector
spec:
  hostnames:
    - ophan.theguardian.com
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: redirector
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tiktok
  namespace: redirector
spec:
  hostnames:
    - tiktok.com
    - vm.tiktok.com
    - www.tiktok.com
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: redirector
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: twitter
  namespace: redirector
spec:
  hostnames:
    - twitter.com
    - www.twitter.com
    - x.com
    - www.x.com
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: redirector
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: youtube
  namespace: redirector
spec:
  hostnames:
    - youtu.be
    - youtube.com
    - www.youtube.com
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: redirector
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
